autoneg-system/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    fluxcd.io/ignore: sync_only   # We never want to delete this namespace
  labels:
    app: autoneg
    control-plane: controller-manager
    k8s-namespace: autoneg-system
  name: autoneg-system
