autoneg-system/autoneg.yaml
# Original source: https://raw.githubusercontent.com/GoogleCloudPlatform/gke-autoneg-controller/master/deploy/autoneg.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8443"
    prometheus.io/scheme: https
    prometheus.io/scrape: "true"
  labels:
    app: autoneg
    control-plane: controller-manager
  name: autoneg-controller-manager-metrics-service
  namespace: autoneg-system
spec:
  ports:
    - name: https
      port: 8443
      targetPort: https
  selector:
    app: autoneg
    control-plane: controller-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: autoneg
    control-plane: controller-manager
  name: autoneg-controller-manager
  namespace: autoneg-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autoneg
      control-plane: controller-manager
  template:
    metadata:
      labels:
        app: autoneg
        control-plane: controller-manager
    spec:
      containers:
        - args:
            - --metrics-addr=127.0.0.1:8080
            - --enable-leader-election
          command:
            - /manager
          image: ghcr.io/googlecloudplatform/gke-autoneg-controller/gke-autoneg-controller:v0.9.5
          name: manager
          resources:
            limits:
              cpu: 100m
              memory: 30Mi
            requests:
              cpu: 100m
              memory: 20Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
        - args:
            - --secure-listen-address=0.0.0.0:8443
            - --upstream=http://127.0.0.1:8080/
            - --logtostderr=true
            - --v=10
          image: gcr.io/kubebuilder/kube-rbac-proxy:v0.8.0
          name: kube-rbac-proxy
          ports:
            - containerPort: 8443
              name: https
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
      securityContext:
        runAsNonRoot: true
      terminationGracePeriodSeconds: 10
