autoneg-system/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-from-autoneg-to-gcp-api
  namespace: autoneg-system
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 10.0.0.0/8
  - ports:
    - port: 443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 199.36.153.8/30
  - ports:
    - port: 80
      protocol: TCP
    to:
    - ipBlock:
        cidr: 169.254.169.254/32
  - ports:
    - port: 988
      protocol: TCP
    to:
    - ipBlock:
        cidr: 127.0.0.1/32
    - ipBlock:
        cidr: 169.254.169.252/32
  podSelector:
    matchLabels:
      app: autoneg
  policyTypes:
  - Egress
